version/0.19/_sources/api/solver/_autosummary/settings/create_group_surfaces.rst.txt
:orphan:

.. _create_group_surfaces:

create_group_surfaces
=====================

.. autoclass:: ansys.fluent.core.solver.settings_241.create_group_surfaces.create_group_surfaces
    :show-inheritance:

.. rubric:: Arguments

============================   ============================

Argument                                            Summary

============================   ============================
:ref:`surfaces <surfaces_4>`       Select list of surfaces.

:ref:`name <name_1>`                          'name' child.

============================   ============================

.. rubric:: Included in:

============================   =====================

Parent                                       Summary

============================   =====================
:ref:`surfaces <surfaces_5>`       'surfaces' child.

============================   =====================

