version/0.27/_sources/api/solver/_autosummary/settings/create_group_surfaces.rst.txt
:orphan:

.. _create_group_surfaces:

create_group_surfaces
=====================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.create_group_surfaces
    :show-inheritance:

.. rubric:: Arguments

=============================   ===========================================

Argument                                                            Summary

=============================   ===========================================
:ref:`surfaces <surfaces_10>`                      Select list of surfaces.

:ref:`name <name_20>`               Specify the name for the group surface.

=============================   ===========================================

.. rubric:: Included in:

==============================   ===============================================================================================

Parent                                                                                                                   Summary

==============================   ===============================================================================================
:ref:`surfaces_5 <surfaces_5>`       Provides access to creating multiple zone surfaces and to grouping and ungrouping surfaces.

==============================   ===============================================================================================

